源泉について微修正

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                                 <span class="text-gray-600">が天引きされる</span>
                             </div>
                         </div>
-                        <p class="mt-4 text-sm text-gray-700">報酬からは所得税が天引きされます。これは税金の前払い。年間所得によっては<strong class="text-[#0079FF]">確定申告</strong>で精算が必要です。<br><strong>Pro Tip:</strong> 請求書で消費税を分ければ、税抜額が源泉徴収の対象となり、手取りが増えます。</p>
+                        <p class="mt-4 text-sm text-gray-700">報酬からは所得税が天引きされることも。これは税金の前払い。年間所得によっては<strong class="text-[#0079FF]">確定申告</strong>で精算が必要です。<br><strong>Pro Tip:</strong> 税別の場合は、請求書で消費税を分ければ、税抜額が源泉徴収の対象となり、手取りが増えます。</p>
                     </div>
 
                     <div class="text-center">
@@ -199,7 +199,7 @@
                         <span class="text-2xl text-[#FFD700] mr-4">2.</span>
                         <div>
                             <h3 class="font-bold text-xl">源泉徴収を覚悟する</h3>
-                            <p>報酬から10.21%引かれるのが基本。確定申告の準備も忘れずに。</p>
+                            <p>報酬から10.21%引かれることがあります。確定申告の準備も忘れずに。</p>
                         </div>
                     </div>
                     <div class="flex items-start">
